--- a/package.json
+++ b/package.json
@@ -87,8 +87,10 @@
     "@types/googlemaps": "^3.30.4",
     "@types/leaflet": "1.2.3",
     "@types/node": "6.0.90",
+    "chai": "^4.2.0",
     "codelyzer": "^5.0.1",
     "conventional-changelog-cli": "1.3.4",
+    "cypress": "^5.5.0",
     "husky": "0.13.3",
     "jasmine-core": "2.6.4",
     "jasmine-spec-reporter": "4.1.1",
@@ -98,6 +100,7 @@
     "karma-coverage-istanbul-reporter": "2.1.0",
     "karma-jasmine": "3.1.1",
     "karma-jasmine-html-reporter": "1.5.3",
+    "mocha": "^8.2.1",
     "npm-run-all": "4.0.2",
     "protractor": "5.4.3",
     "rimraf": "2.6.1",
